2002-12-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in images/Makefile.am, common/Makefile.am.
	* images/Makefile.am: Remove.
	* common/Makefile.am: Remove.
	* configure.ac: Reflect changes above.
	* main.am: Append -I $(topsrc_dir) to AM_MAKEINFOFLAGS.

2002-11-13	Joel Sherrill <joel@OARcorp.com>

	* index.html.in: Note that the Getting Started with GNAT/RTEMS 
	manual is largely obsolete now that GNAT is in GCC.

2002-10-24	Joel Sherrill <joel@OARcorp.com>

	* index.html.in: Add links to multiple missing CPU supplements.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-07-30	Joel Sherrill <joel@OARcorp.com>

	* configure.ac: Added supplements/arm/Makefile.

2002-07-30	Joel Sherrill <joel@OARcorp.com>

	* README: Updated.

2002-06-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* project.am: Use PATH_SEPARATOR to setup TEXINPUTS.

2002-04-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* VERSION, bootstrap: Removed as unneeded.

2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Remove.
	* VERSION: Remove.
	* Makefile.am: 
	Remove bootstrap.
	Add ACLOCAL_AMFLAGS.
	* configure.ac: Add RTEMS_TOP.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-02-14	Joel Sherrill <joel@OARcorp.com>

	* configure.ac: New mips supplement.

2002-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reworked.
	* Makefile.am: Remove texinfo/texinfo.tex
	* bootstrap: Removed.
	* configure.ac: Add pkgdocdir. Let htmldir be rooted at pkgdocdir.
	* main.am: Remove TEXINFO_TEX.
	* project.am: Let dvidir, psdir, pdfdir be rooted at pkgdocdir.
	Remove commented out make-variables.

2002-01-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache, install-sh, mdate-sh, missing,