@@ -1,13 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_PREREQ(2.52)
+AC_PREREQ(2.57)
 
 AC_INIT([rtems-doc],[_RTEMS_VERSION],[rtems-bugs@OARcorp.com])
 AC_CONFIG_SRCDIR([project.am])
 RTEMS_TOP([..])
 AC_CONFIG_AUX_DIR([..])
 
-AM_INIT_AUTOMAKE([no-define foreign 1.6])
+AM_INIT_AUTOMAKE([no-define foreign 1.7.2])
 AM_MAINTAINER_MODE
 
 AC_ARG_ENABLE(html,
@@ -143,7 +143,6 @@ develenv/Makefile
 user/Makefile
 bsp_howto/Makefile
 started/Makefile
-started/pictures/Makefile
 porting/Makefile
 networking/Makefile
 posix_users/Makefile
