@@ -1,20 +1,0 @@
-## $Id$
-
-
-PROJECT = started
-
-html_projectdir = $(htmldir)/$(PROJECT)
-
-if USE_HTML
-html_project_DATA = sfile12c.jpg bit_c.jpg
-endif
-
-noinst_DATA = bit_ada.jpg bit_ada.vsd bit_c.jpg bit_c.vsd scfile10.jpg \
-    scfile10.vsd scfile11.jpg scfile11.vsd scfile12.jpg scfile12.vsd \
-    scfile13.jpg scfile13.vsd scsfile1.jpg scsfile1.vsd scsfile2.jpg \
-    scsfile2.vsd scsfile3.jpg scsfile3.vsd scsfile4.jpg scsfile4.vsd \
-    scsfile5.jpg scsfile5.vsd scsfile6.jpg scsfile6.vsd scsfile7.jpg \
-    scsfile7.vsd scsfile8.jpg scsfile8.vsd scsfile9.jpg scsfile9.vsd \
-    sfile12c.jpg sfile12c.vsd
-
-EXTRA_DIST = $(noinst_DATA)
