@@ -1,3 +1,11 @@
+2003-01-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* configure.ac: Require autoconf-2.57.
+	Require automake-1.7.2.
+	Remove started/pictures/Makefile.
+	* started/Makefile.am: Merge-in pictures/Makefile.am	
+	* started/pictures/Makefile.am: Remove.
+
 2002-12-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Merge-in images/Makefile.am, common/Makefile.am.
